--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "gulp-open": "^1.0.0",
     "jquery": "^2.1.4",
     "lodash": "^3.10.0",
-    "object-assign": "^3.0.0",
-    "react": "^0.13.3",
+    "object-assign": "^4.1.0",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "toastr": "^2.1.0",
