--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
-  "ecmaFeatures": {
-    "jsx": true
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
   "env": {
     "browser": true,
