--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
   "author": "Cory House",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react": "^6.16.0",
-    "babelify": "^7.3.0",
-    "bootstrap": "^3.3.5",
-    "browserify": "^13.1.1",
-    "flux": "^3.1.2",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-open": "^2.0.0",
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.2",
-    "object-assign": "^4.1.0",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
-    "react-router": "^3.0.0",
-    "toastr": "^2.1.0",
-    "vinyl-source-stream": "^1.1.0"
+    "babel-preset-react": "6.16.0",
+    "babelify": "7.3.0",
+    "bootstrap": "3.3.5",
+    "browserify": "13.1.1",
+    "flux": "3.1.2",
+    "gulp": "3.9.0",
+    "gulp-concat": "2.6.0",
+    "gulp-connect": "5.0.0",
+    "gulp-eslint": "3.0.1",
+    "gulp-open": "2.0.0",
+    "jquery": "3.1.1",
+    "lodash": "4.17.2",
+    "object-assign": "4.1.0",
+    "react": "15.4.1",
+    "react-dom": "15.4.1",
+    "react-router": "3.0.0",
+    "toastr": "2.1.0",
+    "vinyl-source-stream": "1.1.0"
   }
 }
