--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babelify": "7.3.0",
     "bootstrap": "3.3.7",
     "browserify": "14.0.0",
+    "connect-history-api-fallback": "^1.3.0",
     "flux": "3.1.2",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
