--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flux": "^3.1.3",
     "jquery": "^3.2.1",
     "prettier": "^1.4.4",
     "react": "^15.6.1",
