--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "dependencies": {
     "flux": "^3.1.3",
-    "jquery": "^3.2.1",
-    "prettier": "^1.4.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1",
-    "toastr": "^2.1.2"
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
