--- a/package.json
+++ b/package.json
@@ -10,24 +10,27 @@
   "author": "Cory House",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react": "6.22.0",
-    "babelify": "7.3.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-react": "6.24.1",
+    "babelify": "8.0.0",
     "bootstrap": "3.3.7",
-    "browserify": "14.0.0",
+    "browserify": "14.5.0",
     "connect-history-api-fallback": "^1.3.0",
-    "flux": "3.1.2",
+    "create-react-class": "^15.6.2",
+    "flux": "3.1.3",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
     "gulp-connect": "5.0.0",
-    "gulp-eslint": "3.0.1",
+    "gulp-eslint": "4.0.0",
     "gulp-open": "2.0.0",
-    "jquery": "3.1.1",
+    "jquery": "3.2.1",
     "lodash": "4.17.4",
     "object-assign": "4.1.1",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
-    "react-router": "3.0.2",
-    "toastr": "2.1.2",
-    "vinyl-source-stream": "1.1.0"
+    "prop-types": "^15.6.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-router-dom": "^4.2.2",
+    "toastr": "2.1.4",
+    "vinyl-source-stream": "2.0.0"
   }
 }
