--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "babelify": "8.0.0",
     "bootstrap": "3.3.7",
     "browserify": "14.5.0",
-    "connect-history-api-fallback": "^1.3.0",
+    "connect-history-api-fallback": "^1.5.0",
     "create-react-class": "^15.6.3",
     "flux": "3.1.3",
     "gulp": "3.9.1",
     "gulp-concat": "2.6.1",
-    "gulp-connect": "5.0.0",
+    "gulp-connect": "5.6.1",
     "gulp-eslint": "4.0.0",
-    "gulp-open": "2.0.0",
-    "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "gulp-open": "3.0.1",
+    "jquery": "3.3.1",
+    "lodash": "4.17.10",
     "object-assign": "4.1.1",
     "prop-types": "^15.6.2",
     "react": "16.4.2",
@@ -32,5 +32,8 @@
     "react-router-dom": "^4.3.1",
     "toastr": "2.1.4",
     "vinyl-source-stream": "2.0.0"
+  },
+  "engines": {
+    "node": ">=4"
   }
 }
