--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "run-p start:dev start:api",
+    "start:dev": "cx start",
+    "prestart:api": "node tools/createMockDb.js",
+    "start:api": "node tools/apiServer.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
