--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "json-server": "^0.14.2",
     "npm-run-all": "^4.1.5",
     "react-scripts": "2.1.8"
   },
   "scripts": {
     "start": "run-p start:dev start:api",
-    "start:dev": "react-scripts start",
+    "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
     "prestart:api": "node tools/createMockDb.js",
     "start:api": "node tools/apiServer.js",
     "build": "react-scripts build",
