--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "flux": "^3.1.3",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-router-dom": "^5.0.0"
+    "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.1.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
