--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "eslint-plugin-react-hooks": "^1.6.0",
-    "flux": "^3.1.3",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "react-router-dom": "^5.0.0",
-    "react-toastify": "^5.1.0"
-  },
-  "devDependencies": {
     "cross-env": "^5.2.0",
+    "flux": "^3.1.3",
     "json-server": "^0.14.2",
     "npm-run-all": "^4.1.5",
-    "react-scripts": "2.1.8"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "3.0.0",
+    "react-toastify": "^5.1.0"
   },
   "scripts": {
     "start": "run-p start:dev start:api",
@@ -23,22 +20,22 @@
     "prestart:api": "node tools/createMockDb.js",
     "start:api": "node tools/apiServer.js",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "eslint": {
-    "plugins": [
-      "react-hooks"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn"
-    }
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
